complete header suddivisione in header-main-footer

--- a/index.html
+++ b/index.html
@@ -7,8 +7,46 @@
         <title>Discord</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body>
-        
-        
-    </body>
+    <body class="debug">
+
+         <!--inizio Header-->
+
+         <header>
+            <div class="topbar">
+
+                <div class="logo-column col">
+                    Logo
+                </div>
+
+                <div class="menu-column col">
+                    <ul>
+                        <li>Link</li>
+                        <li>Link</li>
+                        <li>Link</li>
+                        <li>Link</li>
+                        <li>Link</li>
+                    </ul>
+                </div>
+
+                <div class="login-column col">
+                    Login
+                </div>
+            </div>
+
+            <div id="jumbotron">
+
+            </div>
+         </header>
+
+         <main>
+
+         </main>
+
+         <footer>
+
+         </footer>
+
+    </body>    
+
+   
 </html>
