--- a/index.html
+++ b/index.html
@@ -39,11 +39,56 @@
          </header>
 
          <main>
+            <section>
+                <div class="section-container">
+                    <div class="big-column col"></div>
+                    <div class="small-column col"></div>
 
+                </div>
+            </section>
+
+            <section>
+                <div class="bg-grey">
+                    <div class="big-column col"></div>
+                    <div class="small-column col"></div>
+
+                </div>
+            </section>
+
+            <section>
+                <div class="section-container">
+                    <div class="big-column col"></div>
+                    <div class="small-column col"></div>
+
+                </div>
+            </section>
+
+            <section>
+                <div class="bg-grey">
+                    <div class="section-container">
+                        <div class="full-column col"></div>
+                    </div>
+                </div>
+            </section>
          </main>
 
          <footer>
+            <div class="footer-top">
+                <div class="main-column col"></div>
+                <div class="menu-column col">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+            </div>
 
+            <hr>
+
+            <div class="footer-bottom">
+                <div class="col">Logo</div>
+                <div class="col">Bottone</div>
+            </div>
          </footer>
 
     </body>    
