fine discord blocchi

--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
     <body class="debug">
 
          <!--inizio Header-->
-
          <header>
             <div class="topbar">
-
                 <div class="logo-column col">
                     Logo
                 </div>
@@ -34,24 +32,27 @@
             </div>
 
             <div id="jumbotron">
-
+                <div class="content col">
+                </div>
             </div>
          </header>
+         <!--fine Header-->
 
+         <!--inizio main-->
          <main>
             <section>
                 <div class="section-container">
                     <div class="big-column col"></div>
                     <div class="small-column col"></div>
-
                 </div>
             </section>
 
             <section>
                 <div class="bg-grey">
-                    <div class="big-column col"></div>
-                    <div class="small-column col"></div>
-
+                    <div class="section-container">
+                        <div class="small-column col"></div>
+                        <div class="big-column col"></div>
+                    </div>
                 </div>
             </section>
 
@@ -59,7 +60,6 @@
                 <div class="section-container">
                     <div class="big-column col"></div>
                     <div class="small-column col"></div>
-
                 </div>
             </section>
 
@@ -71,7 +71,9 @@
                 </div>
             </section>
          </main>
+         <!--fine main-->
 
+         <!--inizio footer-->
          <footer>
             <div class="footer-top">
                 <div class="main-column col"></div>
@@ -87,11 +89,9 @@
 
             <div class="footer-bottom">
                 <div class="col">Logo</div>
-                <div class="col">Bottone</div>
+                <div class="col">Botton</div>
             </div>
          </footer>
-
-    </body>    
-
-   
+         <!--fine footer-->
+    </body>       
 </html>
