Correzioni main e background footer-col-bottone e logo

--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
                 </div>
             </section>
 
-            <section>
-                <div class="bg-grey">
-                    <div class="section-container">
+            <section class="bg-grey">
+                <div class="section-container">
                         <div class="small-column col"></div>
                         <div class="big-column col"></div>
-                    </div>
                 </div>
             </section>
 
@@ -63,11 +61,9 @@
                 </div>
             </section>
 
-            <section>
-                <div class="bg-grey">
+            <section class="bg-grey">
                     <div class="section-container">
                         <div class="full-column col"></div>
-                    </div>
                 </div>
             </section>
          </main>
@@ -89,7 +85,7 @@
 
             <div class="footer-bottom">
                 <div class="col">Logo</div>
-                <div class="col">Botton</div>
+                <div class="col">Bottone</div>
             </div>
          </footer>
          <!--fine footer-->
